# usbmanager

./: AUTHORS  Makefile  Makefile.in  README  README.md  aclocal.m4  auto_config.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  USBManager.glade
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  list.h  main.c  names.c  names.h  syserr.c  syserr.h  usbinfo.c  usbinfo.h  usbmanager  usbmisc.h  usbparse.c  usbparse.h  usbtree.c  usbtree.h
src/.deps/: callbacks.Po  interface.Po  main.Po  names.Po  syserr.Po  usbinfo.Po  usbparse.Po  usbtree.Po
